Make letters clickable.  Fix some game logic bugs.

--- a/client/game/game.html
+++ b/client/game/game.html
@@ -153,7 +153,7 @@
 <template name="handLetters">
     {{#each myHand}}
         <div class="ui two wide column">
-            <div class="ui segment">
+            <div id="letter" class="ui segment">
                 <h1 class="ui header">{{letter}}<sub>{{value}}</sub></h1>
             </div>
         </div>
